changes made after customers review

--- a/desktop/Bootstrapfile/bslayouit1.html
+++ b/desktop/Bootstrapfile/bslayouit1.html
@@ -12,8 +12,16 @@
             border: 1px solid #000;
             height: 100px;
 
-        }
 
+      <!----- to be deleted 
+      
+  width {
+
+    100%
+  }          
+
+        }
+........
     </style>
 </head>
 <body>
